# StayVigil

./: .env.local.example  .gitignore  PROJECT.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  supabase-migration-dual-chain.sql  supabase-migration-full.sql  supabase-migration-phase5.sql  supabase-migration-tx-dedup.sql  supabase-migration.sql  tsconfig.json  vercel.json
contracts/: hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: BountyVault.sol  VigilChallenge.sol  VigilStaking.sol  VigilToken.sol
contracts/scripts/: deploy.ts
contracts/test/: VigilProtocol.test.ts
programs/: Anchor.toml  package.json
programs/programs/bounty-vault/: Cargo.toml
programs/programs/bounty-vault/src/: lib.rs
programs/programs/vigil-challenge/: Cargo.toml
programs/programs/vigil-challenge/src/: lib.rs
programs/programs/vigil-staking/: Cargo.toml
programs/programs/vigil-staking/src/: lib.rs
programs/tests/: vigil-protocol.ts
src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
src/app/auditor/: page.tsx
src/components/: BaseProvider.tsx  ChainSelector.tsx  ConditionalBaseProvider.tsx  FindingCard.tsx  Footer.tsx  Header.tsx  ScanForm.tsx  ScoreBadge.tsx  ShieldLogo.tsx  SolanaProvider.tsx
src/lib/: database.types.ts  fetcher.ts  rate-limit.ts  solana-programs.ts  solana-verify.ts  solana.ts  supabase.ts  x402.ts
src/mcp/: server.ts
tests/: scanner.test.ts
tests/fixtures/: malicious-skill.md  medium-risk-skill.md  prompt-injection-skill.md  safe-skill.md  secrets-skill.md
(+30 files in other folders)
