[package]
name = "bounty-vault"
version = "0.1.0"
description = "Vigil Protocol bounty vault — reward distribution for successful challenges"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
