[package]
name = "vigil-challenge"
version = "0.1.0"
description = "Vigil Protocol challenge program — dispute resolution for auditor reports"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vigil_challenge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
vigil-staking = { path = "../vigil-staking", features = ["cpi"] }
