[package]
name = "vigil-staking"
version = "0.1.0"
description = "Vigil Protocol staking program — auditor staking with tier thresholds and slashing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vigil_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
